# flatten-repo

./: Cargo.toml  Makefile
src/: lib.rs  main.rs
