[package]
name = "flatten-repo"
description = "Flattens repos into a single XML file."
version = "0.1.0"
edition = "2021"

[lib]
name = "flatten_repo"
path = "src/lib.rs"

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.35"
encoding_rs_io = "0.1"
git2 = "0.19.0"
quick-xml = "0.36.2"
thiserror = "1.0.65"
glob = "0.3.1"
clap = { version = "4.5", features = ["derive"] }
yash-fnmatch = "1.1.1"
atty = "0.2.14"
